--- a/src/components/Lunettes.astro
+++ b/src/components/Lunettes.astro
@@ -57,5 +57,75 @@
     <clipPath id="clip0_97_378">
       <rect width="564" height="217" fill="white"></rect>
     </clipPath>
+
+    <!-- Définitions des dégradés pour les verres teintés -->
+    <linearGradient
+      id="gradient-magenta-rose"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#FF1493;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#FF69B4;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient
+      id="gradient-beige-orange"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#FFD7BE;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#D2691E;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient id="gradient-cyan-vert" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" style="stop-color:#00CED1;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#32CD32;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient id="gradient-beige-tan" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" style="stop-color:#F5DEB3;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#8B4513;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient
+      id="gradient-turquoise-vert"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#40E0D0;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#228B22;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient
+      id="gradient-magenta-fuchsia"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#FF69B4;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#8B008B;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient
+      id="gradient-citron-vert"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#FFFF00;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#00AA00;stop-opacity:0.8"></stop>
+    </linearGradient>
+    <linearGradient
+      id="gradient-tomate-cramoisi"
+      x1="0%"
+      y1="0%"
+      x2="100%"
+      y2="100%"
+    >
+      <stop offset="0%" style="stop-color:#FF6347;stop-opacity:0.8"></stop>
+      <stop offset="100%" style="stop-color:#DC143C;stop-opacity:0.8"></stop>
+    </linearGradient>
   </defs>
 </svg>
